--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch ConsoleMinesweeper",
+            "request": "launch",
+            "mainClass": "src.ConsoleMinesweeper",
+            "projectName": "Minesweeper_d589525d"
+        },
+        {
+            "type": "java",
             "name": "Launch src.MinesweeperGUI",
             "request": "launch",
             "mainClass": "src.MinesweeperGUI",
